--- a/Header/header.less
+++ b/Header/header.less
@@ -8,12 +8,19 @@ header{
     z-index: 1001;
     background:linear-gradient(lightseagreen,#f79d00);
     padding-bottom:10px;
+    margin-left: -1px;
     @media @tablet{
         flex-direction: column;
         padding-bottom: 0;
     }
+
     .button-mobile{
         display:none;
+        @media @phone{
+            display: flex;
+            width:100%;
+        }
+
         p{  
             width:100%;
             text-align: center;
@@ -22,11 +29,8 @@ header{
             border-bottom: 1px solid black;
             cursor: pointer;
         }
-        @media @phone{
-            display: flex;
-            width:100%;
-        }
     }
+
     .logo {
         margin-top:15px;
         width: 10%;
@@ -52,6 +56,7 @@ header{
             width:100%;
             
         }
+
         a{  
             justify-content: space-between;
             text-decoration: none;
@@ -74,18 +79,19 @@ header{
             @media @phone{
                 display: none;
             }
+        }
     }
+
     .dropdown{
         display: flex;
         flex-direction: row;
         width: 100%;
         
-        .dropdown-button{
-            
-           
+        .dropdown-button{           
             @media @tablet{
                 display:none;
             }
+
             a{
                 text-decoration: none;
                 color: black;
@@ -97,6 +103,7 @@ header{
                 }
             }
         }
+
         .dropdown-links{
             width:100%;
             flex-direction: column;
@@ -109,30 +116,29 @@ header{
                 margin:0 auto;
                 padding-left: 0;
             }
+
             a{
                 text-decoration: none;
                 color: black;
                 cursor: pointer;
-                
                 @media @tablet{
                     color:black;
-                    
                 }
                 &:hover{
                     text-decoration: underline;
                     color:black;
-                    }
                 }
             }
-            .dropdown-hidden{
-                display:none;
-                @media @tablet{
-                    display:flex;
-                }
-            
+        }
+
+        .dropdown-hidden{
+            display:none;
+            @media @tablet{
+                display:flex;
             }
+        
+        }
     }
-}
 
     #google_translate_element{
         position: absolute;
@@ -142,5 +148,4 @@ header{
             display:none;
         }
     }
-
 }
